# Chip-8-Emulator

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/lib/: chip8.hpp  instructions.cpp  instructions.hpp
code/src/: main.cpp
code/tests/: CMakeLists.txt  instructionTests.cpp
devops/ansible-playbooks/: configure.yml  playbook.yml
lib/: chip8.hpp  constants.hpp  instructions.cpp  instructions.hpp  logger.hpp
src/: main.cpp
tests/: CMakeLists.txt  README.MD  hardwareTests.cpp  instructionTests.cpp
